--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -40,8 +40,12 @@ body{
 .switch-light-dark:hover{
     cursor: pointer;
 
-    border: 2px solid var(--Red500);
+    background-color: hsla(0, 0%, 93%, 0.485);
     transition: 0.5s;
+}
+
+.list-title{
+    color: var(--Neutral0);
 }
 
 .extension-list{
@@ -51,6 +55,31 @@ body{
     justify-content: space-around;
 
     margin: 20px;
+}
+
+.activate-deactivate{
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.toggles{
+    margin: 10px;
+    padding: 10px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+    border: solid 1px var(--Neutral600);
+    border-radius: 20px;
+
+    color: var(--Neutral300);
+}
+
+.toggles:hover{
+    cursor: pointer;
+    background-color: hsla(0, 0%, 93%, 0.177);
+    color: var(--Neutral800);
+    transition: 0.5s;
 }
 
 
