--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -35,155 +35,85 @@ body{
 }
 
 .header-logo{
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
+  align-items: center;
 
-    background-color: var(--Neutral700);
+  background-color: var(--Neutral700);
 
-    padding: 10px;
-    margin: 10px;
+  padding: 10px;
+  margin: 10px;
 
-    border-radius: 20px;
+  border-radius: 20px;
 }
 
 .logo-image{
-    width: 160px;
-    height: 36px;
-    padding: 2px;  
+  width: 160px;
+  height: 36px;
+  padding: 2px;  
 }
 
 .switch-light-dark{
-    background-color: var(--Neutral600);
+  background-color: var(--Neutral600);
 
-    border-radius: 8px;
+  border-radius: 8px;
 
-    padding: 10px;
+  padding: 10px;
 }
 
 .switch-light-dark:hover{
-    cursor: pointer;
+  cursor: pointer;
 
-    background-color: hsla(0, 0%, 93%, 0.485);
-    transition: 0.5s;
+  background-color: hsla(0, 0%, 93%, 0.485);
+  transition: 0.5s;
+  border: solid 1px var(--Red500);
 }
 
 .switch-change{
-    background-image: url('../images/icon-sun.svg');
-    background-repeat: no-repeat;
-    background-size: cover;
+  background-image: url('../images/icon-sun.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
 
-    padding: 8px;
+  padding: 8px;
 }
 
-
 .list-title{
-    color: var(--Neutral0);
+  color: var(--Neutral0);
 }
 
 .extension-list{
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
+  justify-content: space-evenly;
 
-    margin: 20px;
+  margin: 20px;
 }
 
 .activate-deactivate{
-    display: flex;
-    flex-flow: row wrap;
-    align-items: center;
+  display: flex;
+  flex-flow: row wrap;
+  align-items: center;
 }
 
 .toggles{
-    margin: 10px;
-    padding: 10px;
-    padding-left: 20px;
-    padding-right: 20px;
+  margin: 10px;
+  padding: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
 
-    border: solid 1px var(--Neutral600);
-    border-radius: 20px;
+  border: solid 1px var(--Neutral600);
+  border-radius: 20px;
 
-    color: var(--Neutral300);
+  color: var(--Neutral300);
 }
 
 .toggles:hover{
-    cursor: pointer;
-    background-color: hsla(0, 0%, 93%, 0.177);
-    color: var(--Neutral800);
-    transition: 0.5s;
-}
-
-.extensions{
-    display: grid;
-}
-
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 50px;
-  height: 22px;
-}
-
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
-}
-
-.slider {
-  position: absolute;
   cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  background-color: hsla(0, 0%, 93%, 0.177);
+  color: var(--Neutral800);
+  transition: 0.5s;
+
+  border-color: var(--Red500);
 }
-
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 15px;
-  width: 15px;
-  left: 5px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
-}
-
-input:checked + .slider {
-  background-color: #2196F3;
-}
-
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
-}
-
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
-}
-
-.extension{
-    background-color: var(--Neutral700);
-    padding: 10px;
-    margin: 10px;
-}
-
-
-
