--- a/assets/styles/stats.css
+++ b/assets/styles/stats.css
@@ -4,4 +4,6 @@
     background-color: var(--Red700);
     color: var(--Neutral900);
     transition: 0.2s;
+
+    border: solid 1px var(--Red700);
 }
