--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -28,6 +28,31 @@
   --DarkGradient: linear-gradient(180deg, #040918 0%, #091540 100%);
 }
 
+body{
+  width: 100vw;
+  height: 100vh;
+}
+
+.header-image-switch{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 10px;
+  margin: 10px;
+}
+
+.extension-list{
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+
+  flex-flow: row wrap;
+}
+
+.extensions{
+  display: grid;
+}
 
 
 
