--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -54,5 +54,15 @@ body{
   display: grid;
 }
 
+.switch-dark-light{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  padding: 10px;
+
+  border-radius: 10px;
+}
+
 
 
