--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -69,6 +69,13 @@ body{
   transition: 0.3s;
 }
 
+.switch-dark-light-input{
+  opacity: 0;
+  position: absolute;
+  width: 0;
+  height: 0;
+}
+
 /* active, inactive, all */
 
 .extension-list-actives{
